...
    <string name="calendar_default_start_sub">The time a newly added service is created with</string>
    <string name="calendar_armed">Armed</string>
    <string name="calendar_armed_off">Off</string>
    <string name="calendar_arm_tip">Arm or disarm every cue</string>
    <string name="calendar_cue_skip_tip">Skip this cue</string>
    <string name="calendar_cue_action_countdown">Start countdown</string>
    <string name="calendar_cue_action_go_live">Go live</string>
    <string name="calendar_cue_action_project">Announcement loop</string>
    <string name="calendar_cue_action_scene">Show canvas scene</string>
    <string name="calendar_cue_filter_presets">Filter presets…</string>
    <string name="calendar_cue_action_blank">Blank outputs</string>
    <string name="calendar_cue_badge_timer">Timer</string>
    <string name="calendar_cue_badge_go_live">Go live</string>
...
